@@ -161,6 +161,9 @@ used by Pentobi.</dd>
 <dd>Appends a letter to the move number on the board if the move has
 variations. If moves are marked with dots instead of numbers, a circle will be
 used instead of a dot for moves not in the main variation.</dd>
+<dt>Move number</dt>
+<dd>This option exists only in desktop mode and shows the move number, move
+annotation and variation information at the right side of the status bar.</dd>
 <dt>Move marking</dt>
 <dd>Change the way moves are marked on the board. The options are to mark the
 last move played with a dot or with a number, or to show the numbers of all
