@@ -179,13 +179,17 @@ benutzten Blokus-SGF-Dateiformat.</dd>
 Varianten besitzt. Wenn Züge mit einem Punkt statt einer Nummer markiert
 werden, wird ein Kreis statt ein Punkt für Züge verwendet, die nicht in der
 Hauptvariante sind.</dd>
+<dt>Zugnummer</dt>
+<dd>Diese Option existiert nur im Desktop-Modus und zeigt die Zugnummer,
+Zugannotierung und Varianteninformation auf der rechten Seite der Statusleiste
+an.</dd>
 <dt>Zugmarkierung</dt>
 <dd>Ändert die Markierung von Zügen auf dem Spielbrett. Die Optionen sind, den
 zuletzt gespielten Zug mit einem Punkt oder einer Nummer zu markieren, oder die
 Nummern aller Züge zu zeigen oder gar keine Markierung zu zeigen.</dd>
 <dt>Kommentar zeigen</dt>
+<dt>Sichtbarkeit des Kommentarbereichs, wenn sich die Stellung ändert. Die</dt>
 <dd>Diese Option existiert nur im Desktop-Modus und konfiguriert die
-Sichtbarkeit des Kommentarbereichs, wenn sich die Stellung ändert. Die
 Standardeinstellung ist, dass der Kommentarbereich nur sichtbar ist, wenn ein
 Kommentar zur aktuellen Stellung existiert.</dd>
 </dl>
